# ugos-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release-please-config.json
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release.yml
.kiro/: mcp.json
.kiro/agents/: ugos-dev.json
.kiro/docs/: api-auth.md  api-docker.md  api-kvm.md  api-overview.md
.kiro/steering/: architecture.md  conventions.md  plan.md  requirements.md
crates/ugos-cli/: Cargo.toml
crates/ugos-cli/src/: cli.rs  main.rs  output.rs  session.rs
crates/ugos-cli/src/commands/: mod.rs
crates/ugos-client/: Cargo.toml
crates/ugos-client/src/: auth.rs  client.rs  error.rs  lib.rs  tests.rs
crates/ugos-client/src/api/: docker.rs  kvm.rs  mod.rs
crates/ugos-client/src/types/: common.rs  docker.rs  kvm.rs  mod.rs
crates/ugos-client/tests/: integration.rs
crates/ugos-mcp/: Cargo.toml
crates/ugos-mcp/src/: lib.rs  main.rs  tests.rs
