[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-or-later"
authors = ["Fabian Schmieder <fabian@schmieder.eu>"]
repository = "https://github.com/metaneutrons/ugos-cli"
homepage = "https://github.com/metaneutrons/ugos-cli"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused_results = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json", "cookies"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rsa = "0.9"
base64 = "0.22"
tabled = "0.17"
thiserror = "2"

[profile.release]
lto = true
strip = true
codegen-units = 1
