[package]
name = "ugos-cli"
description = "Command-line interface for UGOS NAS management"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
dirs = "6"
serde.workspace = true
serde_json.workspace = true
tabled.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ugos-client = { path = "../ugos-client" }
