[package]
name = "ugos-mcp"
description = "MCP server exposing UGOS NAS operations as tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "ugos-mcp"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
rmcp = { version = "1.4", features = ["server", "transport-io"] }
schemars = "0.8"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ugos-client = { path = "../ugos-client" }
